--- a/EventTix/EventTix.csproj
+++ b/EventTix/EventTix.csproj
@@ -21,6 +21,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="NLog" Version="5.2.2" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +32,8 @@
     <None Remove="Repositories\" />
     <None Remove="Profiles\" />
     <None Remove="Services\" />
+    <None Remove="Middleware\" />
+    <None Remove="Exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -38,5 +42,7 @@
     <Folder Include="Repositories\" />
     <Folder Include="Profiles\" />
     <Folder Include="Services\" />
+    <Folder Include="Middleware\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
