fixed bug at getAllOrders

--- a/EventTix/appsettings.json
+++ b/EventTix/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  //"ConnectionStrings": {
-  //  "PracticaConnection": "Server=localhost;Database=Practica;User Id=SA;Password=MyPassword123#;Encrypt=False"
-  //},
+  "ConnectionStrings": {
+    "PracticaConnection": "Server=localhost;Database=Practica;User Id=SA;Password=MyPassword123#;Encrypt=False"
+  },
   "AllowedHosts": "*"
 }
